--- a/package.json
+++ b/package.json
@@ -22,7 +22,17 @@
     "@angular/platform-browser": "~9.1.13",
     "@angular/platform-browser-dynamic": "~9.1.13",
     "@angular/router": "~9.1.13",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/chart.js": "^2.9.34",
+    "angular-bootstrap-md": "^12.0.0",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.1.0",
+    "chart.js": "^2.5.0",
     "d3": "^7.0.0",
+    "hammerjs": "^2.0.8",
+    "highcharts": "^9.2.2",
+    "highcharts-angular": "^2.10.0",
+    "ngx-pagination": "^5.1.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
